--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -235,6 +235,8 @@
             line-height: 18px
     .footer
         padding: 40px 20px
+
+
 @media (max-width: 575px)
     .promo
         padding: 20px 20px
@@ -328,3 +330,32 @@
             margin: 0 auto
         &__line
             display: none
+
+    .overlay
+        display: none
+        position: fixed
+        width: 100%
+        height: 100%
+        top: 0
+        background-color: rgba(0, 0, 0, 0.5)
+    .modal
+        width: 320px
+        padding: 30px 10px 0
+        &__close
+            top: 5px
+            right: 5px
+            color: #0d0d0d
+        &__subtitle
+            font-size: 18px
+            line-height: 18px
+        &__descr
+            font-size: 14px
+            line-height: 14px
+            margin-top: 8px
+        .feed-form
+            margin-top: 0 auto
+            padding: 10px
+            input
+                margin: 10px auto
+                width: 100%
+                padding: 10px 20px
