--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -340,7 +340,7 @@
         background-color: rgba(0, 0, 0, 0.5)
     .modal
         width: 320px
-        padding: 30px 10px 0
+        padding: 30px 10px 20px
         &__close
             top: 5px
             right: 5px
